[project]
name = "planiverse"
version = "0.1.0"
description = "A Python library for planning with simulators."
authors = [
    {name = "Mustafa Faisal",email = "mustafa.faisal.eng@gmail.com"}
]
license = {text = "GPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pddlgym (>=0.0.7,<0.0.8)",
    "pyboy (>=2.5.1,<3.0.0)",
    "nasim @ git+https://github.com/MFaisalZaki/NetworkAttackSimulator.git",
    "psutil (>=7.0.0)",
    "pymetasploit3 (>=1.0.6)",
    "python-nmap (>=0.7.1)",
    "chex (>=0.1.89)",
    "flax (>=0.10.4)",
    "jaxmarl (>=0.0.7)",
    "dill (>=0.3.9)",
    "numba (>=0.61.0)",
    "osmnx (==2.0.4)",
    "branca (==0.8.1)",
    "fiona (==1.10.1)",
    "folium (==0.20.0)",
    "haversine (==2.9.0)",
    "ipfn (==1.4.4)",
    "pyarrow (==20.0.0)",
    "gdal (>=3.11.1)",
    "climada (==6.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
